Fixed layout issues on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ html {
 body {
   width: 100%;
   display: table-cell;
+  
 }
 
 html,
@@ -26,7 +27,6 @@ body {
   background: rgba(0, 0, 0, 0.6);
 }
 .page-container,::after{
-  box-sizing:unset !important;
   overflow: hidden;
 }
 
@@ -76,9 +76,7 @@ div.row {
 .bg-dark {
   background-color: black !important;
 }
-.navbar-toggler {
-  margin-left: 10px;
-}
+
 
 h1,
 h2,
